<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMICalculator</string>
    <string name="label_description">BMIを計算します</string>
    <string name="label_height">身長(cm)</string>
    <string name="label_weight">体重(kg)</string>
    <string name="button_calculate">計算</string>
    <string name="label_bmi_description">あなたのBMIは</string>
    <string name="button_close_dialog">閉じる</string>
    <string name="button_show_next_activity">結果を次画面に表示</string>
    <string name="label_too_slim">痩せ気味です</string>
    <string name="label_standard">標準体型です</string>
    <string name="label_too_fat">太り気味です</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
